2008-09-21  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: An error for non-supported
	charset="" parameter is added.

2008-09-20  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: New error for accept-charset="".
	New errors for RFC 4646 errors.

2008-09-17  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Support for |text/x-css-inline| type is added.

2008-09-17  Wakaba  <wakaba@suika.fam.cx>

	* standards.en.html: Updated.

2008-09-16  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: WebIDL checker errors are added.

2008-09-16  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: WebIDL parser errors are added.

2008-09-15  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: "control char" errors are now
	handled by UnicodeChecker module.  New "non unicode" error added.

2008-09-11  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Unicode checker
	errors are added.

2008-09-10  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Encoding layer errors added.

2008-08-31  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: More error descriptions.

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Descriptions for new error
	types are added.

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* cc-style.css: Rule for empty |mark| elements is added.

	* error-description-source.xml: Error message for
	unknown address type error is updated.

2008-08-29  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Error types added for IMTChecker.

2008-08-22  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: More l10n.

	* mkdescription.pl: Fallback <html:title> to xml:lang=en's one.

2008-08-22  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Localize "no more information"
	message.

2008-08-17  Wakaba  <wakaba@suika.fam.cx>

	* cc-about.en.html: Author section added.

	* cc.cgi: |text/x-h2h| added.
