@@ -32,6 +32,15 @@ supporting <a href="standards">latest Web standards</a> including
 </ul>
 </div>
 
+<div class=section id=bookmarklet>
+<h3>Bookmarklet</h3>
+
+<p><a href="javascript:%0A%20%20location.href%20%3D%20%27http%3A%2F%2Fsuika.fam.cx%2Fgate%2F2007%2Fhtml%2Fcc%2F%3Furi%3D%27%0A%20%20%20%20%20%20%2B%20encodeURIComponent%20%28location.href%29%3B%0A%20%20void%20%280%29%3B%0A"><i>Check
+by
+<abbr title="Web Hypertext Application Conformance Checker">WebHACC</abbr></i>
+bookmarklet</a>
+</div>
+
 <div class=section id=powerdby>
 <h3>Powered by ...</h3>
 
